# rll

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/update/: downloader.rs  mod.rs  updater.rs  utils.rs
src/update/structs/: mc_assets.rs  mc_libs.rs  mc_versions.rs  mod.rs
